--- a/bruinmatch-frontend/package.json
+++ b/bruinmatch-frontend/package.json
@@ -12,6 +12,7 @@
     "react-native-web": "^0.17.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
