--- a/bruinmatch-frontend/package.json
+++ b/bruinmatch-frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "react": "^18.1.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.1.0",
     "react-native-web": "^0.17.7",
     "react-router-dom": "^5.3.0",
