--- a/bruinmatch-backend/package.json
+++ b/bruinmatch-backend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.3.1",
+    "multer": "^1.4.4",
     "validation": "^0.0.1"
   },
   "devDependencies": {
