--- a/bruinmatch-frontend/package.json
+++ b/bruinmatch-frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^18.1.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.1.0",
+    "react-file-base64": "^1.0.3",
     "react-native-web": "^0.17.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
