--- a/bruinmatch-frontend/package.json
+++ b/bruinmatch-frontend/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
+    "Buffer": "^0.0.0",
     "form-data": "^4.0.0",
     "react": "^18.1.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.1.0",
     "react-file-base64": "^1.0.3",
+    "react-native-base64": "^0.2.1",
     "react-native-web": "^0.17.7",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
